# VesselAPI

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
apps/backend/: docker-compose.yml  package.json
apps/backend/src/: app.module.ts  app.service.ts  main.ts
apps/backend/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  constants.ts  jwt.strategy.ts
apps/backend/src/collections/: collections.controller.spec.ts  collections.controller.ts  collections.module.ts  collections.service.spec.ts  collections.service.ts
apps/backend/src/common/: api-response.ts  http-exception.filter.ts
apps/backend/src/drizzle/: drizzle.module.ts  schema.ts
apps/backend/src/types/: authenticated-request.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.d.ts  App.d.ts.map  App.js  App.js.map  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  network.rs
apps/extension/: package.json  tsconfig.json
apps/extension/dist-chrome/: background.js.map  content.js  manifest.json
apps/extension/dist-firefox/: background.js  content.js  content.js.map  manifest.json
apps/extension/manifests/: chrome.json  firefox.json
apps/extension/scripts/: build.ts
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: App.d.ts  App.d.ts.map  App.js  App.js.map  App.tsx  index.css
(+6 files in other folders)
